左侧菜单栏修改

--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -26,8 +26,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
-            android:textColor="#66000000"
-            android:textSize="16dp"
+            android:textColor="#666666"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:text="@string/drawer_tools"/>
 
         <TextView
@@ -39,9 +40,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_app_locker"
             android:drawableStart="@drawable/ic_drawer_app_locker"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_app_locker"/>
 
         <TextView
@@ -53,9 +54,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_smart_charge"
             android:drawableStart="@drawable/ic_drawer_smart_charge"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_smart_charge"/>
 
         <View
@@ -69,8 +70,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
-            android:textColor="#66000000"
-            android:textSize="16dp"
+            android:textColor="#666666"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:text="@string/drawer_setting"/>
 
         <TextView
@@ -84,9 +86,9 @@
             android:drawableStart="@drawable/ic_drawer_usb"
             android:drawableRight="@drawable/drawer_setting_switcher_selector"
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_usb_plugin_message"/>
 
         <TextView
@@ -100,9 +102,9 @@
             android:drawableStart="@drawable/ic_drawer_low_space"
             android:drawableRight="@drawable/drawer_setting_switcher_selector"
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_low_space_warning"/>
 
 
@@ -117,9 +119,9 @@
             android:drawableStart="@drawable/ic_drawer_logger"
             android:drawableRight="@drawable/drawer_setting_switcher_selector"
             android:drawableEnd="@drawable/drawer_setting_switcher_selector"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_logger_notification"/>
 
         <View
@@ -133,8 +135,9 @@
             android:layout_marginLeft="20dp"
             android:layout_marginStart="20dp"
             android:gravity="center_vertical"
-            android:textColor="#66000000"
-            android:textSize="16dp"
+            android:textColor="#666666"
+            android:textSize="12dp"
+            android:textStyle="bold"
             android:text="@string/drawer_other"/>
 
         <TextView
@@ -146,9 +149,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_rating"
             android:drawableStart="@drawable/ic_drawer_rating"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_rating"/>
 
         <TextView
@@ -160,9 +163,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_update"
             android:drawableStart="@drawable/ic_drawer_update"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_update"/>
 
         <TextView
@@ -174,9 +177,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_help"
             android:drawableStart="@drawable/ic_drawer_help"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_help"/>
 
         <TextView
@@ -188,9 +191,9 @@
             android:gravity="center_vertical"
             android:drawableLeft="@drawable/ic_drawer_about"
             android:drawableStart="@drawable/ic_drawer_about"
-            android:drawablePadding="15dp"
-            android:textColor="#B2000000"
-            android:textSize="15dp"
+            android:drawablePadding="13dp"
+            android:textColor="#000000"
+            android:textSize="12dp"
             android:text="@string/drawer_about"/>
 
     </LinearLayout>
