--- a/app/src/main/res/layout/item_zip_file.xml
+++ b/app/src/main/res/layout/item_zip_file.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@android:color/white"
     android:orientation="vertical">
 
     <RelativeLayout
@@ -71,6 +72,13 @@
         android:id="@+id/item_zip_wide_divider"
         android:layout_width="match_parent"
         android:layout_height="10dp"
+        android:background="#f5f6ff"
+        android:visibility="gone"/>
+
+    <View
+        android:id="@+id/item_zip_footer"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:background="#f5f6ff"
         android:visibility="gone"/>
 </LinearLayout>
