--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -20,9 +20,10 @@
 
         <ImageView
             android:id="@+id/iv_main_action_bar_menu"
-            android:layout_width="52dp"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_vertical"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="12.3dp"
+            android:layout_marginLeft="17.3dp"
             android:background="@android:color/transparent"
             android:contentDescription="@null"
             android:src="@drawable/ic_home_menu"
@@ -32,7 +33,8 @@
             android:id="@+id/tv_main_action_bar_title"
             android:layout_width="110dp"
             android:layout_height="19dp"
-            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="12.3dp"
+            android:layout_marginTop="17dp"
             android:src="@drawable/ic_home_title"/>
 
         <android.support.v4.widget.Space
