--- a/app/src/main/res/layout/item_recent_file_block.xml
+++ b/app/src/main/res/layout/item_recent_file_block.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#f5f6ff"
+    android:orientation="vertical"
     android:paddingBottom="8dp"
     android:paddingEnd="4dp"
     android:paddingLeft="4dp"
@@ -14,8 +15,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_block"
-        android:paddingBottom="10dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingBottom="10dp">
         <!-- Title -->
         <RelativeLayout
             android:id="@+id/item_block_title_view_group"
@@ -72,4 +73,10 @@
             android:textColor="@color/black_40"
             android:textSize="16dp"/>
     </LinearLayout>
+
+    <View
+        android:id="@+id/item_footer"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="#f5f6ff"/>
 </LinearLayout>
