--- a/app/src/main/res/layout/view_tip.xml
+++ b/app/src/main/res/layout/view_tip.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<merge
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -29,10 +29,11 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="111dp"
+        android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@color/black_70"
         android:textSize="@dimen/h3_16"
-        tools:text="USB Has Already Connected"/>
+        tools:text="@string/tip_free_space_content"/>
 
     <ImageView
         android:id="@+id/view_tip_close"
@@ -92,4 +93,4 @@
         android:textSize="@dimen/h3_16"
         android:textStyle="bold"
         tools:text="Manage Your Files"/>
-</RelativeLayout>
+</merge>
