--- a/app/src/main/res/layout/activity_same_file.xml
+++ b/app/src/main/res/layout/activity_same_file.xml
@@ -18,30 +18,38 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/white">
-        <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
-            android:id="@+id/elv_same_file_list"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/list_divider_line_color_f5f6ff"
-            android:divider="@color/list_divider_line_color_f5f6ff"
-            android:footerDividersEnabled="false"
-            android:groupIndicator="@null"
-            android:listSelector="@android:color/transparent"
-            android:scrollbars="none"
-            >
-        </com.jb.filemanager.ui.widget.FloatingGroupExpandableListView>
+            android:orientation="vertical">
+
+            <com.jb.filemanager.ui.widget.FloatingGroupExpandableListView
+                android:id="@+id/elv_same_file_list"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/list_divider_line_color_f5f6ff"
+                android:divider="@color/list_divider_line_color_f5f6ff"
+                android:footerDividersEnabled="false"
+                android:groupIndicator="@null"
+                android:listSelector="@android:color/transparent"
+                android:scrollbars="none"
+                >
+            </com.jb.filemanager.ui.widget.FloatingGroupExpandableListView>
+
+            <com.jb.filemanager.ui.widget.BottomOperateBar
+                android:id="@+id/bottom_operate_bar_container"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                />
+        </LinearLayout>
         <View
             android:id="@+id/shadow"
             android:layout_width="match_parent"
             android:layout_height="6dp"
 
             android:background="@drawable/main_shadow"/>
-        <com.jb.filemanager.ui.widget.BottomOperateBar
-            android:id="@+id/bottom_operate_bar_container"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_gravity="bottom"
-            />
         <LinearLayout
             android:id="@+id/ll_no_file"
             android:layout_width="match_parent"
