--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -457,6 +457,8 @@
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:textColor="#66000000"
+                android:layout_marginLeft="4dp"
+                android:layout_marginStart="4dp"
                 android:textSize="10dp"/>
 
             <TextView
