--- a/app/src/main/res/drawable/start_page_btn_enable.xml
+++ b/app/src/main/res/drawable/start_page_btn_enable.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="@color/privacy_btu_deep" />
+    <solid android:color="#00DEBE" />
 
     <corners
         android:bottomLeftRadius="2dp"
