--- a/app/src/main/res/layout/activity_privacy.xml
+++ b/app/src/main/res/layout/activity_privacy.xml
@@ -15,8 +15,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="110dp"
         android:contentDescription="@null"
-        android:src="@drawable/icon2"
-        android:visibility="invisible"/>
+        android:src="@mipmap/ic_launcher"
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/name"
@@ -24,12 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/icon"
         android:layout_marginTop="30dp"
-
         android:text="@string/app_name"
         android:textColor="#444444"
         android:textSize="24sp"
         android:layout_centerHorizontal="true"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/desc"
@@ -41,7 +42,8 @@
         android:text="1.0.1"
         android:textColor="#888888"
         android:textSize="16sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/declaration"
@@ -54,6 +56,7 @@
         android:textColor="#FF9A9A9A"
         android:textSize="10dp"
         android:visibility="invisible"
+        tools:visibility="visible"
          />
 
     <LinearLayout
@@ -64,7 +67,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="18dp"
         android:orientation="horizontal"
-        android:visibility="invisible">
+        android:visibility="invisible"
+        tools:visibility="visible">
 
         <CheckBox
             android:id="@+id/join_uep_cb"
@@ -103,7 +107,8 @@
         android:text="@string/privacy_start_by_agree_policy"
         android:textColor="#FF9A9A9A"
         android:textSize="12sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
     <TextView
         android:id="@+id/start_btn"
@@ -115,6 +120,7 @@
         android:background="@drawable/privacy_button_selector"
         android:gravity="center"
         android:text="@string/private_start"
+        tools:visibility="visible"
         android:textColor="@drawable/privacy_button_text_selector"
         android:textSize="17sp"
         android:visibility="invisible"/>
