--- a/app/src/main/res/layout/main_drawer.xml
+++ b/app/src/main/res/layout/main_drawer.xml
@@ -59,6 +59,7 @@
             android:textColor="#4c4c4c"
             android:textSize="@dimen/h5_12"
             android:textStyle="bold"
+            android:visibility="gone"
             android:text="@string/drawer_smart_charge"/>
 
         <View
@@ -173,6 +174,7 @@
             android:textColor="#4c4c4c"
             android:textSize="@dimen/h5_12"
             android:textStyle="bold"
+            android:visibility="gone"
             android:text="@string/drawer_update"/>
 
         <TextView
