--- a/app/src/main/res/layout/item_clean_trash_child.xml
+++ b/app/src/main/res/layout/item_clean_trash_child.xml
@@ -39,7 +39,8 @@
                 android:ems="10"
                 android:singleLine="true"
                 android:textColor="@color/black_70"
-                android:textSize="14dp"
+                android:textSize="12dp"
+                android:textStyle="bold"
                 tools:text="@string/app_name"/>
 
             <TextView
