--- a/app/src/main/res/layout/inner_item_file.xml
+++ b/app/src/main/res/layout/inner_item_file.xml
@@ -26,7 +26,8 @@
         android:ellipsize="marquee"
         android:singleLine="true"
         android:textColor="@color/black_70"
-        android:textSize="14dp"/>
+        android:textStyle="bold"
+        android:textSize="12dp"/>
 
     <ImageView
         android:id="@+id/inner_item_file_select"
