--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:ignore="SpUsage,ContentDescription"
@@ -12,94 +12,83 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/bg_main_title"
-        android:scaleType="fitXY"/>
-
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:background="#00BBA0">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:orientation="horizontal">
+        <ImageView
+            android:id="@+id/iv_main_action_bar_menu"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_marginTop="12.3dp"
+            android:layout_marginLeft="17.3dp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@null"
+            android:src="@drawable/ic_home_menu"
+            android:scaleType="center"/>
 
-            <ImageView
-                android:id="@+id/iv_main_action_bar_menu"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_marginTop="12.3dp"
-                android:layout_marginLeft="17.3dp"
-                android:background="@android:color/transparent"
-                android:contentDescription="@null"
-                android:src="@drawable/ic_home_menu"
-                android:scaleType="center"/>
+        <ImageView
+            android:id="@+id/tv_main_action_bar_title"
+            android:layout_width="110dp"
+            android:layout_height="19dp"
+            android:layout_marginLeft="12.3dp"
+            android:layout_marginTop="17dp"
+            android:src="@drawable/ic_home_title"/>
 
-            <ImageView
-                android:id="@+id/tv_main_action_bar_title"
-                android:layout_width="110dp"
-                android:layout_height="19dp"
-                android:layout_marginLeft="12.3dp"
-                android:layout_marginTop="17dp"
-                android:src="@drawable/ic_home_title"/>
+        <android.support.v4.widget.Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"/>
 
-            <android.support.v4.widget.Space
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"/>
+        <ImageView
+            android:id="@+id/iv_main_action_bar_search"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_action_bar_search"/>
 
-            <ImageView
-                android:id="@+id/iv_main_action_bar_search"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_action_bar_search"/>
-
-            <ImageView
-                android:id="@+id/iv_main_action_bar_more"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:scaleType="centerInside"
-                android:src="@drawable/ic_action_bar_more"
-                android:visibility="gone"/>
-
-        </LinearLayout>
-
-        <FrameLayout
-            android:id="@+id/fl_home_content"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/vp_main_phone_storage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <android.support.design.widget.TabLayout
-                    android:id="@+id/tl_main_view_pager_tab"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_gravity="top"
-                    app:tabTextAppearance="@style/TabLayoutTextAppearance"
-                    app:tabSelectedTextColor="@color/main_tab_text_color_select"
-                    app:tabTextColor="@color/main_tab_text_color_normal"
-                    app:tabIndicatorHeight="2dp"
-                    app:tabIndicatorColor="@color/main_tab_indicator"
-                    app:tabBackground="@color/transparent" />
-            </android.support.v4.view.ViewPager>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="6dp"
-                android:layout_marginTop="50dp"
-                android:background="@drawable/main_shadow"/>
-
-        </FrameLayout>
+        <ImageView
+            android:id="@+id/iv_main_action_bar_more"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_action_bar_more"
+            android:visibility="gone"/>
 
     </LinearLayout>
 
-</FrameLayout>
+    <FrameLayout
+        android:id="@+id/fl_home_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/vp_main_phone_storage"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tl_main_view_pager_tab"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:layout_gravity="top"
+                android:background="#00BBA0"
+                app:tabTextAppearance="@style/TabLayoutTextAppearance"
+                app:tabSelectedTextColor="@color/main_tab_text_color_select"
+                app:tabTextColor="@color/main_tab_text_color_normal"
+                app:tabIndicatorHeight="2dp"
+                app:tabIndicatorColor="@color/white"
+                app:tabBackground="@color/transparent" />
+        </android.support.v4.view.ViewPager>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="6dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/main_shadow"/>
+
+    </FrameLayout>
+
+</LinearLayout>
