--- a/app/src/main/res/layout/item_image_result.xml
+++ b/app/src/main/res/layout/item_image_result.xml
@@ -37,4 +37,10 @@
         android:layout_width="match_parent"
         android:layout_height="6dp"/>
 
+    <View
+        android:id="@+id/image_child_footer"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:background="@android:color/white"
+        android:visibility="gone"/>
 </LinearLayout>
