--- a/app/src/main/res/layout/fragment_main_category.xml
+++ b/app/src/main/res/layout/fragment_main_category.xml
@@ -611,6 +611,7 @@
         android:layout_marginBottom="11dp"
         android:layout_marginLeft="9dp"
         android:layout_marginRight="9dp"
+        android:paddingBottom="3dp"
         android:textStyle="bold"
         android:textSize="14dp"
         android:text="@string/home_button_clean"
