--- a/app/src/main/res/layout/item_samefile_child.xml
+++ b/app/src/main/res/layout/item_samefile_child.xml
@@ -19,6 +19,7 @@
             android:layout_marginLeft="16dp"
             android:layout_centerVertical="true"
             android:layout_marginStart="16dp"
+            android:background="#00000000"
             />
         <ImageView
             android:id="@+id/iv_music_child_item_select"
