--- a/app/src/main/res/layout/item_samefile_group.xml
+++ b/app/src/main/res/layout/item_samefile_group.xml
@@ -18,6 +18,7 @@
         android:lines="1"
         android:textColor="#999b98"
         android:textSize="12sp"
+        android:textStyle="bold"
         tools:ignore="RtlHardcoded" />
     <com.jb.filemanager.commomview.GroupSelectBox
         android:id="@+id/iv_file_group_item_select"
