--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -32,8 +32,8 @@
 
         <ImageView
             android:id="@+id/tv_main_action_bar_title"
-            android:layout_width="110dp"
-            android:layout_height="19dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="12.3dp"
             android:layout_marginStart="12.3dp"
             android:layout_gravity="center_vertical"
