--- a/app/src/main/res/drawable/common_item_check_seletor.xml
+++ b/app/src/main/res/drawable/common_item_check_seletor.xml
@@ -2,6 +2,6 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:state_checked="false" android:drawable="@drawable/choose_none"/>
-    <item android:state_checked="true" android:drawable="@drawable/select_all"/>
+    <item android:state_checked="true" android:drawable="@drawable/choose_all"/>
 
 </selector>
