--- a/app/src/main/res/layout/dialog_zip_pass_input.xml
+++ b/app/src/main/res/layout/dialog_zip_pass_input.xml
@@ -81,7 +81,7 @@
             android:layout_marginStart="24dp"
             android:layout_marginTop="161dp"
             android:contentDescription="@null"
-            android:src="@drawable/select_none"/>
+            android:src="@drawable/choose_none"/>
 
         <TextView
             android:layout_width="wrap_content"
