--- a/app/src/main/res/layout/item_applock_group.xml
+++ b/app/src/main/res/layout/item_applock_group.xml
@@ -36,7 +36,7 @@
             android:layout_marginRight="4dp"
             android:layout_centerVertical="true"
             android:padding="12dp"
-            android:src="@drawable/select_all"/>
+            android:src="@drawable/choose_all"/>
 
         <View
             android:layout_width="match_parent"
