--- a/app/src/main/res/layout/main_content.xml
+++ b/app/src/main/res/layout/main_content.xml
@@ -63,7 +63,7 @@
             android:paddingStart="0dp"
             android:scaleType="centerInside"
             android:src="@drawable/ic_action_bar_more"
-            android:visibility="visible"/>
+            android:visibility="gone"/>
 
     </LinearLayout>
 
