--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -28,7 +28,9 @@
             android:gravity="center_vertical"
             android:textSize="18dp"
             android:textColor="@color/black_70"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:lines="1"
+            android:ellipsize="middle"/>
 
         <RelativeLayout
             android:id="@+id/rl_main_action_bar_search_container"
@@ -56,7 +58,7 @@
                 android:textSize="18dp"
                 android:inputType="text"
                 android:imeOptions="actionSearch"
-                android:maxLines="1"/>
+                android:maxLines="1" />
 
             <ImageView
                 android:id="@+id/iv_action_bar_clear_input"
