--- a/app/src/main/res/layout/item_main_storage_list_style.xml
+++ b/app/src/main/res/layout/item_main_storage_list_style.xml
@@ -34,14 +34,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#B2000000"
-                android:textSize="14dp" />
+                android:textSize="14dp"
+                android:lines="1"
+                android:ellipsize="end"/>
 
             <TextView
                 android:id="@+id/tv_main_storage_style_list_item_desc"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#66000000"
-                android:textSize="10dp" />
+                android:textSize="10dp"
+                android:lines="1"
+                android:ellipsize="end" />
 
         </LinearLayout>
 
