--- a/app/src/main/res/layout/layout_permission_alarm_view_merge.xml
+++ b/app/src/main/res/layout/layout_permission_alarm_view_merge.xml
@@ -70,6 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="18dp"
+        android:gravity="center"
         android:text="@string/no_new_permissions_line1"
         android:layout_below="@id/permission_alarm_view_merge_content_rl"
         android:textColor="@color/black_70"
@@ -82,6 +83,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
+        android:gravity="center"
         android:layout_below="@id/tv_permission_alarm_title"
         android:text="@string/no_new_permissions_line2"
         android:textColor="@color/black_70"
