--- a/app/src/main/res/layout/view_permission_alert.xml
+++ b/app/src/main/res/layout/view_permission_alert.xml
@@ -31,6 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
+        android:gravity="center"
         android:text="@string/app_name"
         android:layout_below="@id/iv_permission_alarm_icon"
         android:textColor="@color/black_70"
@@ -43,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
+        android:gravity="center"
         android:layout_below="@id/tv_permission_alarm_title"
         android:text="@string/permission_alarm_dialog_content_lv1"
         android:textColor="@color/black_70"
