--- a/app/src/main/res/layout/dialog_zip_file_detail.xml
+++ b/app/src/main/res/layout/dialog_zip_file_detail.xml
@@ -21,9 +21,13 @@
             android:id="@+id/file_name"
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:layout_marginEnd="24dp"
             android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
             android:layout_marginStart="24dp"
             android:layout_marginTop="21dp"
+            android:ellipsize="middle"
+            android:singleLine="true"
             android:textColor="#b3000000"
             android:textSize="20dp"
             android:textStyle="bold"/>
