处理文字的遮挡问题

--- a/app/src/main/res/layout/activity_apk_manager.xml
+++ b/app/src/main/res/layout/activity_apk_manager.xml
@@ -33,11 +33,9 @@
         android:drawableTop="@drawable/ic_bottom_delete"
         android:background="@drawable/app_uninstall_item_selector"
         android:text="@string/app_uninstall"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:textColor="@color/white"
         android:textSize="10dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="6dp"
         android:visibility="visible"/>
 
 </LinearLayout>
